examples/anthos-service-mesh/istio-manifests/authorization-policies/details-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: details-deny-policy
  namespace: bookinfo
spec:
  selector:
    matchLabels:
      app: details
